Upgrade Logistic regression

--- a/notebook/Theory/Logistic_Regression.ipynb
+++ b/notebook/Theory/Logistic_Regression.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,13 +146,8 @@
     "        'b': b\n",
     "    }\n",
     "\n",
-    "    grads = {\n",
-    "        'dw': dw,\n",
-    "        'db': db\n",
-    "    }\n",
     "\n",
-    "\n",
-    "    return params, grads, costs"
+    "    return params, costs"
    ]
   },
   {
@@ -189,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +207,7 @@
     "\n",
     "    w, b = intialize(X_train.shape[0])\n",
     "\n",
-    "    params, grads, costs = optimize(w, b , X_train, Y_train, num_iterations, learning_rate, print_cost)\n",
+    "    params, costs = optimize(w, b , X_train, Y_train, num_iterations, learning_rate, print_cost)\n",
     "\n",
     "    w = params['w']\n",
     "    b = params['b']\n",
