modify Logistic regression

--- a/notebook/Theory/Logistic_Regression.ipynb
+++ b/notebook/Theory/Logistic_Regression.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def intialize(dim: int):\n",
+    "def initialize(dim: int):\n",
     "    \"\"\"\n",
     "    This function creates a vector of zeros of shape (dim, 1) for w and initializes b to 0.\n",
     "    \n",
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def propgate(w: np.array, b: int, X: np.array, Y: np.array):\n",
+    "def propagate(w: np.array, b: float, X: np.array, Y: np.array):\n",
     "    \"\"\"\n",
     "    Implement the cost function and its gradient for the propagation explained above\n",
     "\n",
@@ -75,7 +75,7 @@
     "    cost -- negative log-likelihood cost for logistic regression\n",
     "    \n",
     "    \"\"\"\n",
-    "    m = X.shape[0]\n",
+    "    m = X.shape[1]\n",
     "    A = sigmoid(np.dot(w.T, X)+b)\n",
     "    cost = -1/m * np.sum(Y*np.log(A) + (1-Y)*np.log(1-A))\n",
     "    dz = A - Y\n",
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def optimize(w: np.array, b: int, X: np.array, Y, num_iterations: int=100, learning_rate: float=0.009, print_cost: bool=False):\n",
+    "def optimize(w: np.array, b: float, X: np.array, Y, num_iterations: int=100, learning_rate: float=0.009, print_cost: bool=False):\n",
     "    \"\"\"\n",
     "    This function optimizes w and b by running a gradient descent algorithm\n",
     "    \n",
@@ -112,14 +112,8 @@
     "    print_cost -- True to print the loss every 100 steps\n",
     "    \n",
     "    Returns:\n",
-    "    params -- dictionary containing the weights w and bias b\n",
-    "    grads -- dictionary containing the gradients of the weights and bias with respect to the cost function\n",
+    "    params -- dictionary containing the weights w and bias b.\n",
     "    costs -- list of all the costs computed during the optimization, this will be used to plot the learning curve.\n",
-    "    \n",
-    "    Tips:\n",
-    "    You basically need to write down two steps and iterate through them:\n",
-    "        1) Calculate the cost and the gradient for the current parameters. Use propagate().\n",
-    "        2) Update the parameters using gradient descent rule for w and b.\n",
     "    \"\"\"\n",
     "    import copy\n",
     "    w = copy.deepcopy(w)\n",
@@ -128,7 +122,7 @@
     "    costs = []\n",
     "\n",
     "    for i in range(num_iterations):\n",
-    "        grads, cost = propgate(w, b, X, Y)\n",
+    "        grads, cost = propagate(w, b, X, Y)\n",
     "\n",
     "        dw = grads['dw']\n",
     "        db = grads['db']\n",
@@ -152,11 +146,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict(w: np.array, b: int, X: np.array):\n",
+    "def predict(w: np.array, b: float, X: np.array):\n",
     "    '''\n",
     "    Predict whether the label is 0 or 1 using learned logistic regression parameters (w, b)\n",
     "    \n",
@@ -205,7 +199,7 @@
     "    d -- dictionary containing information about the model.\n",
     "    \"\"\"\n",
     "\n",
-    "    w, b = intialize(X_train.shape[0])\n",
+    "    w, b = initialize(X_train.shape[0])\n",
     "\n",
     "    params, costs = optimize(w, b , X_train, Y_train, num_iterations, learning_rate, print_cost)\n",
     "\n",
