--- a/notebook/Theory/Logistic_Regression.ipynb
+++ b/notebook/Theory/Logistic_Regression.ipynb
@@ -223,6 +223,33 @@
     "    \n",
     "    return d"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = np.array([[0.1, 0.2, 0.3], [0.3, 0.4, 0.5]])\n",
+    "Y_train = np.array([[0, 1, 0]])\n",
+    "X_test = np.array([[0.2, 0.4], [0.5, 0.6]])\n",
+    "Y_test = np.array([[0, 1]])\n",
+    "\n",
+    "def test_model():\n",
+    "    # Train the model and get the dictionary of results\n",
+    "    result = model(X_train, Y_train, X_test, Y_test, num_iterations=10, learning_rate=0.1)\n",
+    "    assert \"costs\" in result, \"Result missing costs key\"\n",
+    "    assert \"Y_prediction_test\" in result, \"Result missing Y_prediction_test key\"\n",
+    "    assert \"Y_prediction_train\" in result, \"Result missing Y_prediction_train key\"\n",
+    "    assert isinstance(result[\"costs\"], list), \"Costs should be a list\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
