Neural network over LR

--- a/notebook/Theory/Logistic_Regression.ipynb
+++ b/notebook/Theory/Logistic_Regression.ipynb
@@ -226,22 +226,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost after iteration 0: 1.0397207708399179\n",
+      "Cost after iteration 100: 0.9548641184480434\n",
+      "Cost after iteration 200: 0.9548349070782658\n",
+      "Cost after iteration 300: 0.954814885430295\n",
+      "Cost after iteration 400: 0.954801162016137\n",
+      "Cost after iteration 500: 0.9547917553075961\n",
+      "Cost after iteration 600: 0.9547853073089909\n",
+      "Cost after iteration 700: 0.9547808873070643\n",
+      "Cost after iteration 800: 0.9547778574029899\n",
+      "Cost after iteration 900: 0.9547757803722148\n",
+      "Cost after iteration 1000: 0.9547743565246888\n",
+      "Cost after iteration 1100: 0.9547733804354022\n",
+      "Cost after iteration 1200: 0.9547727112903779\n",
+      "Cost after iteration 1300: 0.9547722525627841\n",
+      "Cost after iteration 1400: 0.9547719380829871\n",
+      "Cost after iteration 1500: 0.9547717224906233\n",
+      "Cost after iteration 1600: 0.9547715746899936\n",
+      "Cost after iteration 1700: 0.9547714733639467\n",
+      "Cost after iteration 1800: 0.9547714038987128\n",
+      "Cost after iteration 1900: 0.9547713562758802\n",
+      "training accuracy: 66.66666666666667\n",
+      "testing accuracy: 50.0\n"
+     ]
+    }
+   ],
    "source": [
     "X_train = np.array([[0.1, 0.2, 0.3], [0.3, 0.4, 0.5]])\n",
     "Y_train = np.array([[0, 1, 0]])\n",
     "X_test = np.array([[0.2, 0.4], [0.5, 0.6]])\n",
     "Y_test = np.array([[0, 1]])\n",
     "\n",
-    "def test_model():\n",
-    "    # Train the model and get the dictionary of results\n",
-    "    result = model(X_train, Y_train, X_test, Y_test, num_iterations=10, learning_rate=0.1)\n",
-    "    assert \"costs\" in result, \"Result missing costs key\"\n",
-    "    assert \"Y_prediction_test\" in result, \"Result missing Y_prediction_test key\"\n",
-    "    assert \"Y_prediction_train\" in result, \"Result missing Y_prediction_train key\"\n",
-    "    assert isinstance(result[\"costs\"], list), \"Costs should be a list\""
+    "d = model(X_train, Y_train, X_test, Y_test, print_cost=True)"
    ]
   },
   {
